Revert "Changed cell and parent heights so that clickable area covers the whole box. Added new class for cdmPWElement to prevent this part from overflowing as it is not centered in the Entity box."
This reverts commit df9a78c77ad51793302cd8ee2db2e5345bb290fb.

--- a/SiteAssets/pages/3.0/scripts/hazards.list.css
+++ b/SiteAssets/pages/3.0/scripts/hazards.list.css
@@ -2,14 +2,12 @@
   float: left;
   padding: 1%;
   width: 98%;
-  height: 100%
+  min-height:20px
 }
 .fld {
   background-color: rgba(0, 0, 0, 0.1);
   border: 1px solid rgb(33, 107, 153);
-  border-radius: 5px;
-  height: 1px;
-
+  border-radius: 5px
 }
 .assessment {
   background-color: rgba(0, 0, 0, 0.1);
@@ -426,8 +424,4 @@
 #txtform{
   background:white;
   width: 97%
-}
-
-.cdmPWElement{
-  height: fit-content
 }
